# Folia

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.codex/: config.toml
.codex/rules/: default.rules
.github/workflows/: deploy-website.yml  release.yml
config/: eslint.config.js  vite.config.ts
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN.md  ISSUES.md  ROADMAP.md  TASKS.md
e2e/: editor-no-whitescreen.spec.ts  layout-behavior.spec.ts
fixtures/legal-html-tables/: evidence-directory.md  litigation-materials.html
scripts/: create-updater-manifest.mjs  run-website.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  native_preview.rs
src/app/: AppLayout.test.tsx  AppLayout.tsx  AppLayoutSourceEditor.test.tsx  AppLayoutSystemOpenSource.test.tsx
src/components/: DocxPreviewPane.tsx  FloatingToc.tsx  HtmlPresentationPane.test.tsx  HtmlTableEditor.tsx  HtmlTableViewerOverlay.tsx  PreviewPane.tsx  SettingsPage.tsx  StatusBar.tsx  Toolbar.tsx  UpdateDialog.tsx  WechatPreviewPane.test.tsx  WordPaperPreviewPane.test.ts  WordPaperPreviewPane.tsx  WysiwygEditorPane.tsx
src/services/: documentViewMode.test.ts  documentViewMode.ts  docxPreviewService.ts  fileService.test.ts  fileService.ts  htmlExportPresets.ts  htmlPresentationService.test.ts  htmlPresentationService.ts  htmlTableBlockService.test.ts  htmlTableBlockService.ts  htmlTableEditorService.test.ts  htmlTableEditorService.ts  (+18 more)
website/: astro.config.mjs  package-lock.json  package.json
(+24 files in other folders)
